raffia/tests/error/less/variable/bad-declaration-1.snap
---
source: raffia/tests/error.rs
---
error: CSS rule is expected
  ┌─ bad-declaration-1.less:1:1
  │
1 │ @@demo: "hi";
  │ ^


